--- a/SlideshowApp/Base.lproj/Main.storyboard
+++ b/SlideshowApp/Base.lproj/Main.storyboard
@@ -68,6 +68,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="autobutton" destination="FQF-ap-Q5r" id="vvd-Dt-lte"/>
                         <outlet property="bkbutton" destination="yRw-tN-DIY" id="Nki-H4-xEm"/>
                         <outlet property="fwbutton" destination="g6D-hr-bOp" id="OMP-4L-G29"/>
                         <outlet property="imagespace" destination="XkV-Re-PTJ" id="3iF-br-GvP"/>
@@ -92,13 +93,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SAf-BA-KUR">
-                                <rect key="frame" x="0.0" y="20" width="414" height="600"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="600" id="c2r-fY-4ul"/>
-                                </constraints>
+                                <rect key="frame" x="0.0" y="20" width="414" height="658"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EPu-wX-uq2">
-                                <rect key="frame" x="191.5" y="625" width="31" height="30"/>
+                                <rect key="frame" x="191.5" y="728" width="31" height="30"/>
                                 <state key="normal" title="戻る"/>
                                 <connections>
                                     <segue destination="jGm-m2-jRS" kind="unwind" unwindAction="unwind:" id="QYj-sN-O0g"/>
@@ -109,9 +107,10 @@
                         <constraints>
                             <constraint firstItem="SAf-BA-KUR" firstAttribute="leading" secondItem="V6k-kb-xRR" secondAttribute="leading" id="8G1-Re-yB7"/>
                             <constraint firstItem="V6k-kb-xRR" firstAttribute="trailing" secondItem="SAf-BA-KUR" secondAttribute="trailing" id="9sH-6U-EJN"/>
+                            <constraint firstItem="EPu-wX-uq2" firstAttribute="top" secondItem="SAf-BA-KUR" secondAttribute="bottom" constant="50" id="BAH-tL-ceV"/>
+                            <constraint firstItem="V6k-kb-xRR" firstAttribute="bottom" secondItem="EPu-wX-uq2" secondAttribute="bottom" constant="50" id="Fd4-C3-VN9"/>
                             <constraint firstItem="EPu-wX-uq2" firstAttribute="centerX" secondItem="RqD-Ev-Kg0" secondAttribute="centerX" id="SiS-H3-1SX"/>
                             <constraint firstItem="SAf-BA-KUR" firstAttribute="top" secondItem="V6k-kb-xRR" secondAttribute="top" constant="20" id="ctl-QO-9q0"/>
-                            <constraint firstItem="EPu-wX-uq2" firstAttribute="top" secondItem="SAf-BA-KUR" secondAttribute="bottom" constant="5" id="pa7-NG-dmN"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="V6k-kb-xRR"/>
                     </view>
